KSCM-2085 - increased the spacing. fixed.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69182 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -97,7 +97,11 @@ h3.uif-headerText a {
 }
 
 .ks-cm-reviewproposal-validation-spacing{
-  padding-top:25px
+  padding-top:25px;
+}
+
+.ks-cm-reviewproposal-validation{
+  padding-top:15px;
 }
 
 /* end */
